fixes overflow

--- a/css/index.css
+++ b/css/index.css
@@ -247,9 +247,9 @@ body {
     line-height: 70px;
   }
 }
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 100px) {
   .home-page {
-    padding-bottom: 25vh;
+    padding-bottom: 20vh;
   }
   .profile__name {
     font-size: 2rem;
